--- a/emacs.org
+++ b/emacs.org
@@ -1,19 +1,19 @@
 :PROPERTIES:
 :header-args: :mkdirp yes
-:header-args:emacs-lisp: :tangle init.el :lexical yes
+:header-args:emacs-lisp: :tangle emacs/.emacs.d/init.el :lexical yes
 :END:
-#+TITLE: General
+#+TITLE: Emacs
 
 * Header
 Enable lexical binding. When visiting the tangled file, enable read
 only mode.
 
 #+BEGIN_SRC emacs-lisp
-  ;;; init.el --- Koekelas' Emacs configuration -*- lexical-binding: t; buffer-read-only: t; -*-
+  ;;; init.el --- Nicolas' Emacs configuration -*- lexical-binding: t; buffer-read-only: t; -*-
 
   ;;; Commentary:
 
-  ;; Koekelas' Emacs configuration.
+  ;; Nicolas' Emacs configuration.
 
   ;;; Code:
 #+END_SRC
@@ -808,7 +808,7 @@ For the major mode, see [[*YASnippet][YASnippet]].
     :straight t
     :hook ((text-mode prog-mode conf-mode) . yas-minor-mode)
     :preface
-    (declare-function koek-org/get-code-block-var-value "50-general")
+    (declare-function koek-org/get-code-block-var-value "init")
     (declare-function projectile-project-p "projectile")
     (declare-function projectile-project-root "projectile")
     (declare-function yas-choose-value "yasnippet")
@@ -918,7 +918,7 @@ For the major mode, see [[*YASnippet][YASnippet]].
 #+END_SRC
 
 *** New Clojure file
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/clojure-mode/new
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/clojure-mode/new
   # -*- mode: snippet; -*-
   # name: New Clojure file
   # key: new
@@ -929,7 +929,7 @@ For the major mode, see [[*YASnippet][YASnippet]].
 #+END_SRC
 
 *** New shadow-cljs configuration
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/clojure-mode/shadow
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/clojure-mode/shadow
   # -*- mode: snippet; -*-
   # name: New shadow-cljs configuration
   # key: shadow
@@ -940,7 +940,7 @@ For the major mode, see [[*YASnippet][YASnippet]].
 #+END_SRC
 
 *** shadow-cljs Node.js target
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/clojure-mode/node
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/clojure-mode/node
   # -*- mode: snippet; -*-
   # name: shadow-cljs Node.js target
   # key: node
@@ -953,7 +953,7 @@ For the major mode, see [[*YASnippet][YASnippet]].
 #+END_SRC
 
 *** shadow-cljs Node.js test target
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/clojure-mode/nodet
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/clojure-mode/nodet
   # -*- mode: snippet; -*-
   # name: shadow-cljs Node.js test target
   # key: nodet
@@ -967,12 +967,12 @@ For the major mode, see [[*YASnippet][YASnippet]].
 *** ClojureScript
 Inherit Clojure snippets.
 
-#+BEGIN_SRC fundamental :tangle etc/yasnippet/snippets/clojurescript-mode/.yas-parents
+#+BEGIN_SRC fundamental :tangle emacs/.emacs.d/etc/yasnippet/snippets/clojurescript-mode/.yas-parents
   clojure-mode
 #+END_SRC
 
 *** New Emacs Lisp file
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/emacs-lisp-mode/new
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/emacs-lisp-mode/new
   # -*- mode: snippet; -*-
   # name: New Emacs Lisp file
   # key: new
@@ -994,7 +994,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** New HTML file
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/mhtml-mode/new
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/mhtml-mode/new
   # -*- mode: snippet; -*-
   # name: New HTML file
   # key: new
@@ -1015,7 +1015,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** New JavaScript Node.js file
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/js2-mode/node
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/js2-mode/node
   # -*- mode: snippet; -*-
   # name: New JavaScript Node.js file
   # key: node
@@ -1032,7 +1032,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** New JavaScript browser file
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/js2-mode/browser
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/js2-mode/browser
   # -*- mode: snippet; -*-
   # name: New JavaScript browser file
   # key: browser
@@ -1049,7 +1049,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** New Markdown file
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/markdown-mode/new
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/markdown-mode/new
   # -*- mode: snippet; -*-
   # name: New Markdown file
   # key: new
@@ -1067,7 +1067,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** New Org file
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/new
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/new
   # -*- mode: snippet; -*-
   # name: New Org file
   # key: new
@@ -1086,7 +1086,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** Quote block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/q
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/q
   # -*- mode: snippet; -*-
   # name: Quote block
   # key: q
@@ -1097,7 +1097,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** LaTeX math environment
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/math
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/math
   # -*- mode: snippet; -*-
   # name: LaTeX math environment
   # key: $
@@ -1106,7 +1106,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** LaTeX displaymath environment
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/displaymath
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/displaymath
   # -*- mode: snippet; -*-
   # name: LaTeX displaymath environment
   # key: $$
@@ -1115,7 +1115,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** Code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/s
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/s
   # -*- mode: snippet; -*-
   # name: Code block
   # key: s
@@ -1126,7 +1126,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** C code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/sc
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/sc
   # -*- mode: snippet; -*-
   # name: C code block
   # key: sc
@@ -1137,7 +1137,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** C++ code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/scpp
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/scpp
   # -*- mode: snippet; -*-
   # name: C++ code block
   # key: scpp
@@ -1148,7 +1148,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** Java code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/sjava
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/sjava
   # -*- mode: snippet; -*-
   # name: Java code block
   # key: sjava
@@ -1159,7 +1159,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** Clojure code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/sclj
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/sclj
   # -*- mode: snippet; -*-
   # name: Clojure code block
   # key: sclj
@@ -1170,7 +1170,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** ClojureScript code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/scljs
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/scljs
   # -*- mode: snippet; -*-
   # name: ClojureScript code block
   # key: scljs
@@ -1181,7 +1181,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** Common Lisp code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/slisp
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/slisp
   # -*- mode: snippet; -*-
   # name: Common Lisp code block
   # key: sc
@@ -1193,7 +1193,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** Conf code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/sconf
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/sconf
   # -*- mode: snippet; -*-
   # name: Conf code block
   # key: sconf
@@ -1204,7 +1204,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** Emacs Lisp code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/sel
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/sel
   # -*- mode: snippet; -*-
   # name: Emacs Lisp code block
   # key: sel
@@ -1215,7 +1215,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** Erlang code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/serl
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/serl
   # -*- mode: snippet; -*-
   # name: Erlang code block
   # key: serl
@@ -1226,7 +1226,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** HTML code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/shtml
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/shtml
   # -*- mode: snippet; -*-
   # name: HTML code block
   # key: shtml
@@ -1237,7 +1237,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** CSS code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/scss
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/scss
   # -*- mode: snippet; -*-
   # name: CSS code block
   # key: scss
@@ -1248,7 +1248,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** JavaScript code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/sjs
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/sjs
   # -*- mode: snippet; -*-
   # name: JavaScript code block
   # key: sjs
@@ -1259,7 +1259,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** JSON code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/sjson
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/sjson
   # -*- mode: snippet; -*-
   # name: JSON code block
   # key: sjson
@@ -1270,7 +1270,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** Meson code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/smeson
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/smeson
   # -*- mode: snippet; -*-
   # name: Meson code block
   # key: smeson
@@ -1281,7 +1281,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** Octave code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/sm
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/sm
   # -*- mode: snippet; -*-
   # name: Octave code block
   # key: sm
@@ -1292,7 +1292,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** Octave plot code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/smplot
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/smplot
   # -*- mode: snippet; -*-
   # name: Octave plot code block
   # key: smplot
@@ -1310,7 +1310,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** OpenSCAD code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/sscad
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/sscad
   # -*- mode: snippet; -*-
   # name: OpenSCAD code block
   # key: sscad
@@ -1321,7 +1321,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** Python code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/spy
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/spy
   # -*- mode: snippet; -*-
   # name: Python code block
   # key: spy
@@ -1332,7 +1332,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** Python plot code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/spyplot
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/spyplot
   # -*- mode: snippet; -*-
   # name: Python plot code block
   # key: spyplot
@@ -1355,7 +1355,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** Scheme code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/sscm
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/sscm
   # -*- mode: snippet; -*-
   # name: Scheme code block
   # key: sscm
@@ -1366,7 +1366,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** SQL code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/ssql
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/ssql
   # -*- mode: snippet; -*-
   # name: SQL code block
   # key: ssql
@@ -1377,7 +1377,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** YASnippet code block
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/org-mode/sy
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/org-mode/sy
   # -*- mode: snippet; -*-
   # name: YASnippet code block
   # key: sy
@@ -1388,7 +1388,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** GNU GPLv3 license
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/text-mode/gpl
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/text-mode/gpl
   # -*- mode: snippet; -*-
   # name: GNU GPLv3 license
   # key: gpl
@@ -2071,7 +2071,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** GNU AGPLv3 license
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/text-mode/agpl
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/text-mode/agpl
   # -*- mode: snippet; -*-
   # name: GNU AGPLv3 license
   # key: agpl
@@ -2741,7 +2741,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** MIT license
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/text-mode/mit
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/text-mode/mit
   # -*- mode: snippet; -*-
   # name: MIT license
   # key: mit
@@ -2771,7 +2771,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** New snippet file
-#+BEGIN_SRC snippet :tangle etc/yasnippet/snippets/snippet-mode/new
+#+BEGIN_SRC snippet :tangle emacs/.emacs.d/etc/yasnippet/snippets/snippet-mode/new
   # -*- mode: snippet; -*-
   # name: New snippet file
   # key: new
@@ -3254,7 +3254,7 @@ Bury unneeded buffers, computers have more than enough memory.
 *** exar - Monitor layouts                                              :wip:
 For monitors and monitor layouts, see [[*Monitors][Monitors]].
 
-#+BEGIN_SRC emacs-lisp :tangle lisp/exar/exar.el
+#+BEGIN_SRC emacs-lisp :tangle emacs/.emacs.d/lisp/exar/exar.el
   ;;; exar.el --- Emacs, X Window System and RandR -*- lexical-binding: t; -*-
 
   ;;; Commentary:
@@ -3896,7 +3896,7 @@ On [[https://devdocs.io/][DevDocs]], enable:
 #+END_SRC
 
 *** Aliases
-#+BEGIN_SRC fundamental :tangle var/eshell/alias
+#+BEGIN_SRC fundamental :tangle emacs/.emacs.d/var/eshell/alias
   alias ls ls -lah $*
   alias nb jupyter notebook $*
 #+END_SRC
@@ -4176,7 +4176,7 @@ Shr is used by other packages (e.g. [[*mu4e - E-mail client][mu4e]] and [[*elfee
 #+END_SRC
 
 *** gino - Generate project                                             :wip:
-#+BEGIN_SRC emacs-lisp :tangle lisp/gino/gino.el
+#+BEGIN_SRC emacs-lisp :tangle emacs/.emacs.d/lisp/gino/gino.el
   ;;; gino.el --- Generate Arduino project -*- lexical-binding: t; -*-
 
   ;;; Commentary:
