[emacs] Fix warnings

--- a/emacs.org
+++ b/emacs.org
@@ -85,6 +85,9 @@ settings file manually.
 #+BEGIN_SRC emacs-lisp
   (straight-use-package 'use-package)
   (straight-use-package 'delight)         ; Optional dependency
+  (eval-when-compile
+    (require 'use-package))
+  (require 'bind-key)
 #+END_SRC
 
 ** org - Notes, to-do lists and project planning
@@ -114,8 +117,6 @@ For org configuration, see [[*Org][Org]].
     (("C-c f f" . dired)
      ("C-c f C-f" . dired-jump))
     :config
-    (declare-function dired-hide-details-mode "dired")
-
     (setq dired-recursive-copies 'always)
     (setq dired-recursive-deletes 'always)
     (setq dired-dwim-target t)
@@ -143,8 +144,6 @@ Move deleted files to trash.
     (:map projectile-command-map
      ("x t" . projectile-run-vterm))
     :preface
-    (declare-function recentf-include-p "recentf")
-
     (defun koek-proj/forgetp (file-name)
       "Return whether project with root FILE-NAME should be forgotten."
       (not (recentf-include-p file-name)))
@@ -213,8 +212,6 @@ VC is a placeholder.
   (use-package ediff-init
     :defer t
     :preface
-    (declare-function outline-show-all "outline")
-
     (defun koek-diff/unfold-outline ()
       "Unfold outline in outline and derived modes."
       (when (derived-mode-p 'outline-mode) ; org is derived from outline
@@ -243,8 +240,6 @@ VC is a placeholder.
   (use-package ediff-wind
     :defer t
     :config
-    (declare-function ediff-setup-windows-plain "ediff-wind")
-
     (setq ediff-grab-mouse nil)
     (setq ediff-window-setup-function #'ediff-setup-windows-plain)
     (setq ediff-split-window-function #'split-window-right))
@@ -463,10 +458,6 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
       smartparens-mode)
      (smartparens-mode . show-smartparens-mode))
     :preface
-    (declare-function sp--get-context "smartparens")
-    (declare-function sp-get-pair "smartparens")
-    (declare-function sp-local-pair "smartparens")
-
     (defun koek-sp/separate-sexp (open-delimiter action _context)
       "Separate just inserted sexp from previous and/or next sexp.
   OPEN-DELIMITER is a string, the delimiter inserted.  ACTION is a
@@ -770,8 +761,6 @@ Run =M-x= ~make-symbolic-link~. Create a link to
   (use-package abbrev
     :hook ((sql-mode sql-interactive-mode) . abbrev-mode)
     :config
-    (declare-function find-library-name "find-func")
-
     ;; Prime abbrev tables
     (unless (file-exists-p (no-littering-expand-var-file-name "abbrev.el"))
       (require 'find-func)
@@ -808,11 +797,6 @@ For the major mode, see [[*YASnippet][YASnippet]].
     :straight t
     :hook ((text-mode prog-mode conf-mode) . yas-minor-mode)
     :preface
-    (declare-function koek-org/get-code-block-var-value "init")
-    (declare-function projectile-project-p "projectile")
-    (declare-function projectile-project-root "projectile")
-    (declare-function yas-choose-value "yasnippet")
-
     ;; General
     (defun koek-ys/indent-snippet ()
       "Indent last expanded snippet.
@@ -900,8 +884,6 @@ For the major mode, see [[*YASnippet][YASnippet]].
                      (or (koek-org/get-code-block-var-value name) ""))))
           (make-directory file-name 'parents))))
     :config
-    (declare-function yas-reload-all "yasnippet")
-
     ;; Load own snippets
     (setq yas-snippet-dirs (remq 'yas-installed-snippets-dir yas-snippet-dirs))
     (yas-reload-all)
@@ -2840,8 +2822,6 @@ For more information, see ~man 5 hunspell~.
   (use-package flymake-proc
     :defer t
     :config
-    (declare-function flymake-proc-legacy-flymake "flymake-proc")
-
     (remove-hook 'flymake-diagnostic-functions #'flymake-proc-legacy-flymake))
 #+END_SRC
 
@@ -3055,8 +3035,6 @@ Bury unneeded buffers, computers have more than enough memory.
 #+BEGIN_SRC emacs-lisp
   ;; Prevent exwm from asking to replace window manager after
   ;; installation
-  (defvar exwm-replace)
-
   (setq exwm-replace nil)
 
   (use-package exwm
@@ -3169,10 +3147,12 @@ Bury unneeded buffers, computers have more than enough memory.
       "Previously selected workspace number.")
 
     (defface koek-wm/selected-workspace '((t . (:foreground "#ffffff")))
-      "Face for selected workspace label in mode line.")
+      "Face for selected workspace label in mode line."
+      :group 'exwm-workspace)
 
     (defface koek-wm/unselected-workspace '((t . (:foreground "#000000")))
-      "Face for unselected workspace label in mode line.")
+      "Face for unselected workspace label in mode line."
+      :group 'exwm-workspace)
 
     (define-advice exwm-workspace-switch
         (:before (&rest _args) koek-wm/update-previous-workspace-n)
@@ -3240,7 +3220,8 @@ Bury unneeded buffers, computers have more than enough memory.
     :defer t
     :preface
     (defface koek-wm/floating-border '((t . (:foreground "#000000")))
-      "Face for border of floating frames.")
+      "Face for border of floating frames."
+      :group 'exwm-floating)
 
     (defun koek-wm/set-floating-border-color ()
       "Set border color of floating frames."
@@ -3662,9 +3643,6 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
      :map minibuffer-local-map
      ("C-r" . counsel-minibuffer-history))
     :config
-    (declare-function counsel-linux-app-format-function-name-first "counsel")
-    (declare-function ivy-add-actions "ivy")
-
     (ivy-add-actions 'counsel-M-x
                      `(("h"
                         ,(lambda (candidate)
@@ -3763,8 +3741,6 @@ On [[https://devdocs.io/][DevDocs]], enable:
     :bind
     ("C-c d d" . devdocs-lookup)
     :config
-    (declare-function devdocs-setup "devdocs-lookup")
-
     ;; DevDocs is updated more frequently than devdocs-lookup. Update
     ;; subjects.
     (setq devdocs-subjects
@@ -3908,8 +3884,6 @@ On [[https://devdocs.io/][DevDocs]], enable:
     (("C-c x r" . compile)
      ("C-c x C-r" . recompile))
     :preface
-    (declare-function ansi-color-apply-on-region "ansi-color")
-
     (defun koek-cmpl/style-output ()
       "Style process output.
   Output is between `compilation-filter-start' and point."
@@ -3982,9 +3956,6 @@ For e-mail accounts, see [[*E-mail accounts][E-mail accounts]].
   (use-package mu4e-mark
     :defer t
     :config
-    (declare-function mu4e~mark-check-target "mu4e-mark")
-    (declare-function mu4e~proc-move "mu4e-proc")
-
     ;; When trashing e-mail, e-mail is flagged trashed. E-mail flagged
     ;; trashed is deleted by most e-mail providers. Move to trash but
     ;; don't flag trashed.
@@ -4089,7 +4060,8 @@ For news feeds, see [[*News feeds][News feeds]].
     :preface
     (defface koek-pdf/midnight
       '((t . (:foreground "#000000" :background "#ffffff")))
-      "Face for page when `pdf-view-midnight-minor-mode' is enabled.")
+      "Face for page when `pdf-view-midnight-minor-mode' is enabled."
+      :group 'pdf-view)
 
     (define-advice pdf-view-midnight-minor-mode
         (:before (&rest _args) koek-pdf/update-colors)
@@ -4660,8 +4632,6 @@ Configure Conf mode afterwards.
 #+BEGIN_SRC emacs-lisp
   ;; Prevent indium from creating Chrome profile directory during
   ;; installation
-  (defvar indium-chrome-data-dir)
-
   (setq indium-chrome-data-dir nil)
 
   (use-package indium-interaction
@@ -4782,8 +4752,6 @@ templates]].
     ;; Setup resume clock after showing initial buffer
     (add-hook 'window-setup-hook #'org-clock-persistence-insinuate)
     :config
-    (declare-function org-redisplay-inline-images "org")
-
     (use-package avy
       :bind
       (:map org-mode-map
@@ -4882,8 +4850,6 @@ templates]].
      ("C-c o o" . org-clock-out)
      ("C-c o x" . org-clock-cancel))
     :config
-    (declare-function org-clock-load "org-clock")
-
     (setq org-clock-persist 'clock)
 
     (org-clock-load))
@@ -4915,8 +4881,6 @@ templates]].
   (use-package ob-core
     :defer t
     :config
-    (declare-function org-babel-get-src-block-info "ob-core")
-
     (defun koek-org/get-code-block-var-value (name)
       "Return value of variable NAME for current code block.
   NAME is a string, the variable's name."
@@ -4963,7 +4927,7 @@ templates]].
         (save-excursion
           (goto-char (point-max))
           (unless (bobp)
-            (delete-backward-char 1)
+            (delete-char -1)
             (save-buffer)))))
     :config
     (add-hook 'org-babel-post-tangle-hook #'koek-org/process-file-end))
@@ -5061,8 +5025,6 @@ templates]].
   (use-package python
     :mode ((rx ".py" string-end) . python-mode)
     :preface
-    (declare-function python-flymake "python")
-
     (defun koek-py/disable-checker ()
       "Disable Python checker for current."
       (remove-hook 'flymake-diagnostic-functions #'python-flymake 'local))
@@ -5473,13 +5435,6 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
   (use-package moody
     :straight t
     :preface
-    (declare-function eyebrowse--get "eyebrowse")
-    (declare-function flymake--backend-state-diags "flymake")
-    (declare-function flymake--lookup-type-property "flymake")
-    (declare-function flymake-disabled-backends "flymake")
-    (declare-function flymake-reporting-backends "flymake")
-    (declare-function flymake-running-backends "flymake")
-
     (defconst koek-ml/separator (make-string 3 ?\s)
       "Mode line group separator.")
 
@@ -5906,8 +5861,6 @@ Configure monitors and monitor layouts.
     :load-path "lisp/exar"
     :after exwm
     :config
-    (declare-function exwm-enable "exwm")
-
     (let ((icc-dir
            (expand-file-name "icc/"
                              (or (getenv "XDG_DATA_HOME") "~/.local/share/"))))
@@ -6159,8 +6112,6 @@ the instructions on storing passwords.
     :config
     (use-package mu4e-context
       :config
-      (declare-function mu4e-message-field "mu4e-message")
-
       (setq mu4e-contexts
             (list (make-mu4e-context
                    :name "Personal"
@@ -6203,9 +6154,6 @@ Configure news feeds.
   (use-package elfeed
     :defer t
     :preface
-    (declare-function elfeed-db-get-feed "elfeed-db")
-    (declare-function elfeed-meta--put "elfeed-db")
-
     (defvar koek/feeds
       '(("3Blue1Brown" youtube "UCYO_jab_esuFRV4b17AJtAw" mathematics)
         ("Arch Linux" "https://www.archlinux.org/feeds/news/" notice linux)
