[emacs] Fold headings when visiting org files

--- a/emacs.org
+++ b/emacs.org
@@ -4799,6 +4799,7 @@ templates]].
 
     ;; Appearance
     (setq org-adapt-indentation nil)
+    (setq org-startup-folded t)
     (setq org-highlight-latex-and-related '(native))
     (push '("" "listings" nil) org-latex-packages-alist)
 
