--- a/emacs.org
+++ b/emacs.org
@@ -3255,8 +3255,7 @@ Bury unneeded buffers, computers have more than enough memory.
       (setq exwm-floating-border-color
             (face-attribute 'koek-wm/floating-border :foreground)))
     :config
-    (add-hook 'koek-thm/enable-hook #'koek-wm/set-floating-border-color)
-    (koek-wm/set-floating-border-color))
+    (add-hook 'koek-thm/enable-hook #'koek-wm/set-floating-border-color))
 #+END_SRC
 
 *** exar - Monitor layouts                                              :wip:
@@ -5359,7 +5358,6 @@ Load [[https://github.com/purcell/color-theme-sanityinc-tomorrow][Tomorrow]] the
           (cdr (assoc (completing-read "Theme: " candidates nil t) candidates)))))
       ;; Set window theme
       (mapc #'disable-theme custom-enabled-themes)
-      (load-theme (plist-get theme-spec :theme) 'no-confirm)
       (let* ((palette
               (let* ((theme (alist-get (plist-get theme-spec :palette)
                                        color-theme-sanityinc-tomorrow-colors))
@@ -5420,6 +5418,7 @@ Load [[https://github.com/purcell/color-theme-sanityinc-tomorrow][Tomorrow]] the
                (mapcar (pcase-lambda (`(,name . ,attrs))
                          `(,name ((t . ,attrs))))
                        specs)))
+      (load-theme (plist-get theme-spec :theme) 'no-confirm)
 
       ;; Set frame theme
       (mapc #'koek-thm/set-frame-theme-variant (frame-list)))
