[emacs] Fix elfeed recentf exclude regexp

--- a/emacs.org
+++ b/emacs.org
@@ -6234,7 +6234,7 @@ Configure news feeds.
 
     (use-package recentf
       :config
-      (push elfeed-db-directory recentf-exclude))
+      (push (rx-to-string `(and line-start ,elfeed-db-directory)) recentf-exclude))
 
     (dolist (feed koek/feeds)
       (let ((args
