[emacs] Bind dired-goto-file in dired-mode

--- a/emacs.org
+++ b/emacs.org
@@ -115,7 +115,9 @@ For org configuration, see [[*Org][Org]].
   (use-package dired
     :bind
     (("C-c f f" . dired)
-     ("C-c f C-f" . dired-jump))
+     ("C-c f C-f" . dired-jump)
+     :map dired-mode-map
+     ("C-c j d" . dired-goto-file))       ; Complement default keybinding
     :config
     (setq dired-recursive-copies 'always)
     (setq dired-recursive-deletes 'always)
