--- a/emacs.org
+++ b/emacs.org
@@ -4118,7 +4118,7 @@ For news feeds, see [[*News feeds][News feeds]].
   (use-package pdf-links
     :bind
     (:map pdf-links-minor-mode-map
-     ("C-c j l" . pdf-links-action-perform)))
+     ([remap link-hint-open-link] . pdf-links-action-perform)))
 
   (use-package pdf-loader
     :config
